--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
           <ul>
             Apart from being a Mobile App developer 📱 👨🏻‍💻 ....
             <li> I enjoy most of my time Reading 📙 and writing ✍ answers on Quora.</li>
-            <li>Playing geOfs flight simulator. ✈️</li>
+            <li>Playing google Earth (geOfs) flight simulator. ✈️</li>
             <li>Reading feed on medium.com 📘 </li>
             <li>Sometimes contributing in Git Hub too 👨‍💻 😉</li>
           </ul>
