--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
           <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#certificates">Certifications</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
         </li>
         <li class="nav-item">
@@ -266,6 +269,19 @@
 
     <hr class="m-0">
 
+     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="certificates">
+      <div class="w-100">
+        <h2 class="mb-5">Certifications</h2>
+        <i class="fa-li fa fa-check"></i>
+        <p>
+            <li>🎖 <b>Microsoft Certified: Azure Fundamentals AZ-900</b></li>
+            <li>🎖 <b>Essentials in JavaScript ES6 - Udemy </b></li>
+            <li>🎖 <b>Agile Crash Course: Agile Project Management - Udemy</b></li>
+            <li>🎖 <b>React Front End Bootcamp - LCO</b></li>
+      </div>
+    </section>
+
+
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
@@ -288,7 +304,7 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
-        <h2 class="mb-5">Awards &amp; Certifications</h2>
+        <h2 class="mb-5">Awards</h2>
         <ul class="fa-ul mb-0">
            <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
